syntax = "proto3";

package eidos.trading.v1;

option go_package = "github.com/eidos-exchange/eidos/gen/trading/v1;tradingv1";

import "common/enums.proto";
import "common/pagination.proto";

// 交易服务 (订单+清算+账户)
service TradingService {
    // === 订单管理 ===
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);

    // === 成交查询 ===
    rpc ListTrades(ListTradesRequest) returns (ListTradesResponse);

    // === 余额管理 ===
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
    rpc ListBalances(ListBalancesRequest) returns (ListBalancesResponse);

    // === 充提管理 ===
    rpc RequestWithdraw(WithdrawRequest) returns (WithdrawResponse);
    rpc ListWithdrawals(ListWithdrawalsRequest) returns (ListWithdrawalsResponse);
    rpc ListDeposits(ListDepositsRequest) returns (ListDepositsResponse);

    // === 内部调用 ===
    rpc FreezeBalance(FreezeBalanceRequest) returns (FreezeBalanceResponse);
    rpc UnfreezeBalance(UnfreezeBalanceRequest) returns (UnfreezeBalanceResponse);
    rpc TransferBalance(TransferBalanceRequest) returns (TransferBalanceResponse);
    rpc CreditDeposit(CreditDepositRequest) returns (CreditDepositResponse);
}

// === 订单相关 ===
message CreateOrderRequest {
    string wallet = 1;
    string market = 2;
    eidos.common.v1.OrderSide side = 3;
    eidos.common.v1.OrderType order_type = 4;
    string price = 5;            // DECIMAL string
    string amount = 6;           // DECIMAL string
    eidos.common.v1.TimeInForce time_in_force = 7;
    uint64 nonce = 8;
    int64 expiration = 9;        // 毫秒时间戳
    bytes signature = 10;
}

message CreateOrderResponse {
    bool success = 1;
    string order_id = 2;
    string error_code = 3;
    string error_message = 4;
}

message CancelOrderRequest {
    string wallet = 1;
    string order_id = 2;
    uint64 nonce = 3;
    bytes signature = 4;
}

message CancelOrderResponse {
    bool success = 1;
    string error_code = 2;
    string error_message = 3;
}

message GetOrderRequest {
    string order_id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message ListOrdersRequest {
    string wallet = 1;
    string market = 2;                           // 可选，不传查所有市场
    repeated eidos.common.v1.OrderStatus status = 3;  // 可选，不传查所有状态
    eidos.common.v1.PaginationRequest pagination = 4;
}

message ListOrdersResponse {
    repeated Order orders = 1;
    eidos.common.v1.PaginationResponse pagination = 2;
}

message Order {
    string order_id = 1;
    string wallet = 2;
    string market = 3;
    eidos.common.v1.OrderSide side = 4;
    eidos.common.v1.OrderType order_type = 5;
    string price = 6;
    string amount = 7;
    string filled_amount = 8;
    string remaining_amount = 9;
    eidos.common.v1.OrderStatus status = 10;
    eidos.common.v1.TimeInForce time_in_force = 11;
    int64 created_at = 12;
    int64 updated_at = 13;
}

// === 成交相关 ===
message ListTradesRequest {
    string wallet = 1;
    string market = 2;
    eidos.common.v1.PaginationRequest pagination = 3;
}

message ListTradesResponse {
    repeated Trade trades = 1;
    eidos.common.v1.PaginationResponse pagination = 2;
}

message Trade {
    string trade_id = 1;
    string order_id = 2;
    string market = 3;
    eidos.common.v1.OrderSide side = 4;
    string price = 5;
    string amount = 6;
    string quote_amount = 7;
    string fee = 8;
    string fee_token = 9;
    bool is_maker = 10;
    eidos.common.v1.SettlementStatus settlement_status = 11;
    int64 matched_at = 12;
}

// === 余额相关 ===
message GetBalanceRequest {
    string wallet = 1;
    string token = 2;
}

message GetBalanceResponse {
    Balance balance = 1;
}

message ListBalancesRequest {
    string wallet = 1;
}

message ListBalancesResponse {
    repeated Balance balances = 1;
}

message Balance {
    string wallet = 1;
    string token = 2;
    string available = 3;           // 可用余额
    string frozen = 4;              // 冻结余额
    string settled_available = 5;   // 已结算可用 (可提现)
    string pending_settle = 6;      // 待结算增量
}

// === 充提相关 ===
message WithdrawRequest {
    string wallet = 1;
    string token = 2;
    string amount = 3;
    string to_address = 4;
    uint64 nonce = 5;
    bytes signature = 6;
}

message WithdrawResponse {
    bool success = 1;
    string withdraw_id = 2;
    string error_code = 3;
    string error_message = 4;
}

message ListWithdrawalsRequest {
    string wallet = 1;
    eidos.common.v1.PaginationRequest pagination = 2;
}

message ListWithdrawalsResponse {
    repeated Withdrawal withdrawals = 1;
    eidos.common.v1.PaginationResponse pagination = 2;
}

message Withdrawal {
    string withdraw_id = 1;
    string wallet = 2;
    string token = 3;
    string amount = 4;
    string to_address = 5;
    eidos.common.v1.WithdrawStatus status = 6;
    string tx_hash = 7;
    int64 created_at = 8;
    int64 confirmed_at = 9;
}

message ListDepositsRequest {
    string wallet = 1;
    eidos.common.v1.PaginationRequest pagination = 2;
}

message ListDepositsResponse {
    repeated Deposit deposits = 1;
    eidos.common.v1.PaginationResponse pagination = 2;
}

message Deposit {
    string deposit_id = 1;
    string wallet = 2;
    string token = 3;
    string amount = 4;
    string tx_hash = 5;
    uint32 log_index = 6;
    eidos.common.v1.DepositStatus status = 7;
    int64 detected_at = 8;
    int64 credited_at = 9;
}

// === 内部调用 ===
message FreezeBalanceRequest {
    string wallet = 1;
    string token = 2;
    string amount = 3;
    string order_id = 4;
}

message FreezeBalanceResponse {
    bool success = 1;
    string error_code = 2;
    string error_message = 3;
}

message UnfreezeBalanceRequest {
    string wallet = 1;
    string token = 2;
    string amount = 3;
    string order_id = 4;
}

message UnfreezeBalanceResponse {
    bool success = 1;
    string error_code = 2;
    string error_message = 3;
}

message TransferBalanceRequest {
    string from_wallet = 1;
    string to_wallet = 2;
    string token = 3;
    string amount = 4;
    string trade_id = 5;
}

message TransferBalanceResponse {
    bool success = 1;
    string error_code = 2;
    string error_message = 3;
}

message CreditDepositRequest {
    string wallet = 1;
    string token = 2;
    string amount = 3;
    string tx_hash = 4;
    uint32 log_index = 5;
}

message CreditDepositResponse {
    bool success = 1;
    string deposit_id = 2;
    string error_code = 3;
    string error_message = 4;
}
